<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_filter_rules_dialog_add">Add</string>
    <string name="add_filter_rules_dialog_add_as_wildcard">Add as wildcard</string>
    <string name="add_filter_rules_dialog_add_rule">Add rule</string>
    <string name="add_filter_rules_dialog_domain">Domain</string>
    <string name="add_pi_hole_button">Add Pi-hole</string>
    <string name="app_name" translatable="false">Pi-hole Connect</string>
    <string name="back_button_label">Go back</string>
    <string name="disable_dialog_button_10_seconds">10 seconds</string>
    <string name="disable_dialog_button_30_seconds">30 seconds</string>
    <string name="disable_dialog_button_5_minutes">5 minutes</string>
    <string name="disable_dialog_button_cancel">No thanks</string>
    <string name="disable_dialog_button_custom_time">Custom time</string>
    <string name="disable_dialog_button_permanent">Permanently</string>
    <string name="disable_dialog_msg">This will disable Pi-hole ads blocking for the selected period. You can always re-enable ads blocking within the app.</string>
    <string name="disable_dialog_title">Disable ads blocking?</string>
    <string name="duration_picker_dialog_hours">Hours</string>
    <string name="duration_picker_dialog_minutes">Minutes</string>
    <string name="duration_picker_enter_time">Enter time</string>
    <string name="enable_dialog_button_confirm">Enable</string>
    <string name="enable_dialog_button_dismiss" translatable="false">@android:string/cancel</string>
    <string name="enable_dialog_msg">This will enable Pi-hole ads blocking.</string>
    <string name="enable_dialog_title">Enable ads blocking?</string>
    <string name="error_pi_hole_connection_generic">Please check your internet connection or whether the correct password has been set.</string>
    <string name="error_pi_hole_connection_generic_error_prefix">An error has occurred</string>
    <string name="error_show_details">Details</string>
    <string name="filter_rules_blacklist">Blacklist</string>
    <string name="filter_rules_desc_add_filter">Add filter rule</string>
    <string name="filter_rules_desc_delete_filter">Delete filter</string>
    <string name="filter_rules_reg_exr">RegEx</string>
    <string name="filter_rules_whitelist">Whitelist</string>
    <string name="home_ads_over_time">blocked</string>
    <string name="home_blocklist">Blocklist</string>
    <string name="home_percent_blocked">Percent Blocked</string>
    <string name="home_queries_blocked">Queries Blocked</string>
    <string name="home_queries_chart_title">Queries over last 24 hours</string>
    <string name="home_queries_over_time">permitted</string>
    <string name="home_total_queries">Total Queries</string>
    <plurals name="home_unique_clients">
        <item quantity="one">(%d client)</item>
        <item quantity="other">(%d clients)</item>
    </plurals>
    <string name="label_disable_blocking">Disable blocking</string>
    <string name="label_enable_blocking">Enable blocking</string>
    <string name="label_filter_rules">Filters</string>
    <string name="label_home">Home</string>
    <string name="label_log">Log</string>
    <string name="label_pi_hole_connection">Edit instance</string>
    <string name="label_preferences">Preferences</string>
    <string name="label_statistics">Statistics</string>
    <string name="label_tip_jar">Toss a coin</string>
    <string name="label_tools">Tools</string>
    <string name="log_screen_add_filter_rule_failure">Unable to add filter rule</string>
    <string name="log_screen_add_filter_rule_success">Successfully added filter rule</string>
    <string name="log_screen_label_allowed">Allowed</string>
    <string name="log_screen_label_blocked">Blocked</string>
    <string name="log_screen_label_date_sort_asc">Date (oldest)</string>
    <string name="log_screen_label_date_sort_desc">Date (newest)</string>
    <string name="log_screen_label_response_time_sort_asc">Response time (fastest)</string>
    <string name="log_screen_label_response_time_sort_desc">Response time (slowest)</string>
    <string name="log_screen_number_of_queries">Number of queries</string>
    <plurals name="log_screen_results">
        <item quantity="one">%d result</item>
        <item quantity="other">%d results</item>
    </plurals>
    <string name="log_screen_sort">Sort</string>
    <string name="log_screen_status">Status</string>
    <string name="options_menu_bug_report">Report issue</string>
    <string name="options_menu_web_dashboard">Web dashboard</string>
    <string name="pi_hole_connection_app_password_info">About app passwords</string>
    <string name="pi_hole_connection_app_password_tooltip_text"><![CDATA[If you\'ve enabled 2FA on your Pi-hole, enter an app password here instead of your regular password. Generate one in the Pi-hole web interface under Settings > Web interface / API.]]></string>
    <string name="pi_hole_connection_app_password_tooltip_title">Using two-factor authentication?</string>
    <string name="pi_hole_connection_desc_scanner">Scan QR code</string>
    <string name="pi_hole_connection_error_host_required">Host is required</string>
    <string name="pi_hole_connection_hint_password">Your Pi-hole web interface password</string>
    <string name="pi_hole_connection_label_api_path">API Path</string>
    <string name="pi_hole_connection_label_basic_auth_password">Basic Auth password</string>
    <string name="pi_hole_connection_label_basic_auth_realm">Basic Auth realm</string>
    <string name="pi_hole_connection_label_basic_auth_username">Basic Auth username</string>
    <string name="pi_hole_connection_label_host">Host</string>
    <string name="pi_hole_connection_label_name">Name</string>
    <string name="pi_hole_connection_label_password">Password</string>
    <string name="pi_hole_connection_label_port">Port</string>
    <string name="pi_hole_connection_label_show_advance_options">Show advance options</string>
    <string name="pi_hole_connection_label_trust_all_certificates">Trust all certificates</string>
    <string name="pi_hole_connection_label_use_https">Use HTTPS</string>
    <string name="pi_hole_connection_remove">Remove connection</string>
    <string name="pi_hole_connection_remove_dialog_button_remove">Remove</string>
    <string name="pi_hole_connection_remove_dialog_title">Remove connection?</string>
    <string name="pi_hole_connection_save">Save</string>
    <string name="pi_hole_connection_title_scanner">Scan API token</string>
    <string name="preferences_add_pi_hole">Add Pi-hole</string>
    <string name="preferences_appearance">Appearance</string>
    <string name="preferences_dynamic_color">Use dynamic color</string>
    <string name="preferences_my_pi_hole">My Pi-holes</string>
    <string name="preferences_theme">Theme</string>
    <string name="preferences_theme_dark">Dark</string>
    <string name="preferences_theme_light">Light</string>
    <string name="preferences_theme_system">System</string>
    <string name="query_detail_add_to_blacklist">Add to blacklist</string>
    <string name="query_detail_add_to_whitelist">Add to whitelist</string>
    <string name="query_detail_client">Client</string>
    <string name="query_detail_dns_record_type">DNS record type</string>
    <string name="query_detail_done">Done</string>
    <string name="query_detail_requested_domain">Requested domain</string>
    <string name="query_detail_response_time">Response time</string>
    <string name="query_detail_response_time_ms">%.1f ms</string>
    <string name="query_detail_timestamp">Timestamp</string>
    <string name="ranked_list_empty">No data yet</string>
    <string name="statistics_active_clients">Active clients</string>
    <string name="statistics_blocked">Blocked</string>
    <string name="statistics_cached">Cached</string>
    <string name="statistics_forwarded">Forwarded</string>
    <string name="statistics_last_24_hours">Last 24 hours</string>
    <string name="statistics_overview">Overview</string>
    <string name="statistics_queries_per_second">Queries/sec</string>
    <string name="statistics_query_types">Query types</string>
    <string name="statistics_top_blocked">Top blocked</string>
    <string name="statistics_top_client">Top client</string>
    <string name="statistics_top_permitted">Top permitted</string>
    <string name="statistics_unique_domains">Unique domains</string>
    <string name="statistics_upstreams">Upstream servers</string>
    <string name="tip_jar_msg">If you like what you are seeing. Then great, please also leave a tip and some feedback as it would greatly help me on developing this app further. Here\'s some confetti as a thank you (ﾉ´ヮ`)ﾉ*: ･ﾟ</string>
    <string name="tools_flush_logs">Flush logs (24h)</string>
    <string name="tools_flush_network_table">Flush network table</string>
    <string name="tools_gravity_last_updated">Last updated: %s</string>
    <string name="tools_operation_error">Operation failed</string>
    <string name="tools_operation_success">Operation successful</string>
    <string name="tools_restart_dns">Restart DNS resolver</string>
    <string name="tools_update_gravity">Update gravity</string>
    <string name="top_bar_more_options_label">More options</string>
</resources>
