...
            listOf("FORWARDED", "GRAVITY", "CACHE", "UNKNOWN").forEach {
                LogItem(
                    QueryLog(
                        time = 1616407649532.0,
                        status = it,
                        type = "IPv6",
                        domain = "google.com",
                        client = QueryLogClient(name = "android.router"),
                        reply = QueryLogReply(time = 0.050610790252685547),
                    )
                )
            }
        }
...
