...
                    tint = MaterialTheme.colorScheme.success,
                )
            },
            barColor = MaterialTheme.colorScheme.success,
            entries =
                listOf(
                    RankedListEntry("debug.opendns.com", 2385),
                    RankedListEntry("ipv4only.arpa", 2382),
                    RankedListEntry("i-bl6p-cor004.api.p001.1drv.com", 1095),
                    RankedListEntry("gateway.fe.apple-dns.net", 796),
                    RankedListEntry("star-mini.c10r.facebook.com", 617),
                ),
            modifier = Modifier.padding(16.dp),
...
